--- a/package.json
+++ b/package.json
@@ -15,10 +15,16 @@
   "dependencies": {
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
-    "sass": "^1.62.1"
+    "react-router-dom": "^6.11.2",
+    "sass": "^1.62.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/node": "^20.2.3",
@@ -37,6 +43,7 @@
     "prettier": "^2.8.8",
     "pretty-quick": "^3.1.3",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "vite-plugin-react": "^4.0.1"
   }
 }
