--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
+    "@types/qs": "^6.9.7",
     "i18next": "^22.5.0",
     "i18next-browser-languagedetector": "^7.0.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^9.5.0",
+    "qs": "^6.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.3.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "sass": "^1.62.1",
     "sort-by": "^1.2.0"
